# api_box_test_project

./: README.md  ROUTE_RESTRICTIONS_TEST.md  VERSIONED_API_UPDATE.md  debug_table_gen.py  generate_test_data.py  pyproject.toml  test_api_box_with_toy_api.py  test_route_restrictions.py  test_sql_functionality.py
api_box_config/: config.yaml
api_box_config/databases/: test_db.yaml
api_box_config/databases/versioned_db/: 0.1.yaml  0.2.yaml  1.2.yaml
api_box_config/remotes/: allowed_routes_remote.yaml  basic_remote.yaml  custom_mapping_remote.yaml  restricted_remote.yaml
api_box_config/remotes/versioned_remote/: 0.1.yaml  0.2.yaml  1.2.yaml
config/: config.yaml
config/remotes/: remote_1234.yaml  remote_4321.yaml
databases/test_db/: active_users.parquet  posts.parquet  user_permissions.parquet  user_profiles.parquet  users.parquet
databases/versioned_db/0.1/: users.parquet
databases/versioned_db/0.2/: user_permissions.parquet  users.parquet
databases/versioned_db/1.2/: posts.parquet  user_permissions.parquet  users.parquet
tables/: posts.parquet  user_permissions.parquet  users.parquet
tests/: __init__.py  test_api_box_with_toy_api.py  test_curl_fixes.py  test_route_restrictions.py  test_unified_routes.py
toy_api_config/: allowed_routes.yaml  basic.yaml  custom_mapping.yaml  restricted.yaml  versioned_remote.yaml
toy_api_config/apis/: allowed_routes.yaml  basic.yaml  custom_mapping.yaml  restricted.yaml
toy_api_config/databases/: test_db.yaml
toy_api_config/objects/: test.yaml
toy_api_config/versioned_remote/: 0.1.yaml  0.2.yaml  1.2.yaml
(+6 files in other folders)
